--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,7 +4,7 @@
     "language" : "Language",
     "theme": "Theme",
     "lets_start" : "Let’s Start",
-    "find_events_inspire" : "Find Events That Inspire You",
+    "find_events_inspire" : "Find events That Inspire You",
     "dive_into_events": "Dive into a world of events crafted to fit your unique interests. Whether you're into live music, art workshops, professional networking, or simply discovering new experiences, we have something for everyone. Our curated recommendations will help you explore, connect, and make the most of every opportunity around you.",
     "efforts_event_planning": "Effortless Event Planning",
     "take_organizing_events": "Take the hassle out of organizing events with our all-in-one planning tools. From setting up invites and managing RSVPs to scheduling reminders and coordinating details, we’ve got you covered. Plan with ease and focus on what matters – creating an unforgettable experience for you and your guests.",
@@ -63,8 +63,8 @@
     "forget_password2" :"Forget Password",
     "please_enter_event_title":"Please Enter Event Title",
     "please_enter_event_description": "Please Enter Event Description",
-    "no_favorite_events_found":"Opps! No Favorite Events Found",
-    "no_events_found":"Opps! No Events Found",
+    "no_favorite_events_found":"Opps! No Favorite events Found",
+    "no_events_found":"Opps! No events Found",
     "other": "other",
     "booking_details": "Booking Details",
     "personal_details": "Personal Details",
@@ -93,18 +93,20 @@
     "search_events": "Search events",
     "free_event": "Free Event",
     "ticket_price": "Ticket Price",
-    "my_events": "My Events",
+    "my_events": "My events",
     "no_booked_events": "No booked events yet",
     "date": "Date",
     "tickets": "Tickets",
-    "searchEvents": "Search Events",
+    "searchevents": "Search events",
     "searchHint": "Enter event name",
     "close": "Close",
-    "my_events": "My Events",
+    "my_events": "My events",
     "no_booked_events": "No booked events",
     "confirm_delete": "Confirm Delete",
     "are_you_sure_delete_event": "Are you sure you want to delete the event?",
     "cancel": "Cancel",
-    "yes":"Yes"
+    "yes":"Yes",
+    "available_tickets": "Available Tickets",
+    "done":"Done"
 
 }
